Estrutura do projeto

--- a/Projeto Controle Vendas/Projeto Controle Vendas.csproj
+++ b/Projeto Controle Vendas/Projeto Controle Vendas.csproj
@@ -115,5 +115,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Conexao\" />
+    <Folder Include="Dao\" />
+    <Folder Include="Model\" />
+    <Folder Include="Views\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
