Criação do método de Inserir clientes

--- a/Projeto Controle Vendas/Projeto Controle Vendas.csproj
+++ b/Projeto Controle Vendas/Projeto Controle Vendas.csproj
@@ -85,6 +85,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Conexao\ConnectionFactory.cs" />
+    <Compile Include="Dao\ClienteDAO.cs" />
     <Compile Include="Model\Cliente.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -120,8 +121,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Dao\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
