--- a/Projeto Controle Vendas/Projeto Controle Vendas.csproj
+++ b/Projeto Controle Vendas/Projeto Controle Vendas.csproj
@@ -87,6 +87,7 @@
     <Compile Include="Conexao\ConnectionFactory.cs" />
     <Compile Include="Dao\ClienteDAO.cs" />
     <Compile Include="Model\Cliente.cs" />
+    <Compile Include="Model\Funcionario.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Views\Frmclientes.cs">
@@ -94,6 +95,12 @@
     </Compile>
     <Compile Include="Views\Frmclientes.Designer.cs">
       <DependentUpon>Frmclientes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Frmfuncionarios.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Frmfuncionarios.Designer.cs">
+      <DependentUpon>Frmfuncionarios.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -106,6 +113,9 @@
     </Compile>
     <EmbeddedResource Include="Views\Frmclientes.resx">
       <DependentUpon>Frmclientes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\Frmfuncionarios.resx">
+      <DependentUpon>Frmfuncionarios.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
