Finalização da tela de funcionários

--- a/Projeto Controle Vendas/Projeto Controle Vendas.csproj
+++ b/Projeto Controle Vendas/Projeto Controle Vendas.csproj
@@ -87,6 +87,7 @@
     <Compile Include="Conexao\ConnectionFactory.cs" />
     <Compile Include="Dao\ClienteDAO.cs" />
     <Compile Include="Dao\FuncionarioDAO.cs" />
+    <Compile Include="Methods.cs" />
     <Compile Include="Model\Cliente.cs" />
     <Compile Include="Model\Funcionario.cs" />
     <Compile Include="Program.cs" />
