--- a/Projeto Controle Vendas/Projeto Controle Vendas.csproj
+++ b/Projeto Controle Vendas/Projeto Controle Vendas.csproj
@@ -88,10 +88,12 @@
     <Compile Include="Dao\ClienteDAO.cs" />
     <Compile Include="Dao\FornecedorDAO.cs" />
     <Compile Include="Dao\FuncionarioDAO.cs" />
+    <Compile Include="Dao\ProdutoDAO.cs" />
     <Compile Include="Methods.cs" />
     <Compile Include="Model\Cliente.cs" />
     <Compile Include="Model\Fornecedor.cs" />
     <Compile Include="Model\Funcionario.cs" />
+    <Compile Include="Model\Produto.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Views\Frmclientes.cs">
@@ -112,6 +114,12 @@
     <Compile Include="Views\Frmfuncionarios.Designer.cs">
       <DependentUpon>Frmfuncionarios.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\Frmprodutos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Frmprodutos.Designer.cs">
+      <DependentUpon>Frmprodutos.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -129,6 +137,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Views\Frmfuncionarios.resx">
       <DependentUpon>Frmfuncionarios.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\Frmprodutos.resx">
+      <DependentUpon>Frmprodutos.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
