--- a/Projeto Controle Vendas/Projeto Controle Vendas.csproj
+++ b/Projeto Controle Vendas/Projeto Controle Vendas.csproj
@@ -93,7 +93,9 @@
     <Compile Include="Model\Cliente.cs" />
     <Compile Include="Model\Fornecedor.cs" />
     <Compile Include="Model\Funcionario.cs" />
+    <Compile Include="Model\ItemVenda.cs" />
     <Compile Include="Model\Produto.cs" />
+    <Compile Include="Model\Venda.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Views\Frmclientes.cs">
@@ -120,6 +122,12 @@
     <Compile Include="Views\Frmprodutos.Designer.cs">
       <DependentUpon>Frmprodutos.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\Frmvendas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Frmvendas.Designer.cs">
+      <DependentUpon>Frmvendas.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -140,6 +148,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Views\Frmprodutos.resx">
       <DependentUpon>Frmprodutos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\Frmvendas.resx">
+      <DependentUpon>Frmvendas.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
