--- a/Projeto Controle Vendas/Projeto Controle Vendas.csproj
+++ b/Projeto Controle Vendas/Projeto Controle Vendas.csproj
@@ -116,6 +116,12 @@
     <Compile Include="Views\Frmfuncionarios.Designer.cs">
       <DependentUpon>Frmfuncionarios.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\Frmpagto.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Frmpagto.Designer.cs">
+      <DependentUpon>Frmpagto.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\Frmprodutos.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -145,6 +151,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Views\Frmfuncionarios.resx">
       <DependentUpon>Frmfuncionarios.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\Frmpagto.resx">
+      <DependentUpon>Frmpagto.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\Frmprodutos.resx">
       <DependentUpon>Frmprodutos.cs</DependentUpon>
