--- a/Projeto Controle Vendas/Projeto Controle Vendas.csproj
+++ b/Projeto Controle Vendas/Projeto Controle Vendas.csproj
@@ -118,6 +118,12 @@
     <Compile Include="Views\Frmfuncionarios.Designer.cs">
       <DependentUpon>Frmfuncionarios.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\Frmhistorico.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Frmhistorico.Designer.cs">
+      <DependentUpon>Frmhistorico.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\Frmpagto.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -153,6 +159,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Views\Frmfuncionarios.resx">
       <DependentUpon>Frmfuncionarios.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\Frmhistorico.resx">
+      <DependentUpon>Frmhistorico.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\Frmpagto.resx">
       <DependentUpon>Frmpagto.cs</DependentUpon>
